# litmus-test-yan

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  deforestation.py  litmus_test.py  pyproject.toml  requirements.txt  test_deforestation.py  utils.py
.github/workflows/: ci-cd.yml
allinone/: deforestation.py
defor/: __init__.py  change.py  cli.py  indices.py  io.py  masks.py  pipeline.py  threshold.py  types.py
src/deforestation/: __init__.py  change.py  cli.py  indices.py  io.py  logging_utils.py  masking.py  pipeline.py  thresholding.py
tests/: test_change.py  test_indices.py  test_io_misc.py  test_masking.py  test_threshold.py  test_thresholding.py
