[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deforestation"
version = "0.1.0"
description = "Simple deforestation detection using spectral thresholds (SWIR/NIR or NIR-Red)"
readme = "README.md"
authors = [{name = "Yan Cheng", email = "chengyan2017@gmail.com"}]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "rasterio",
    "scipy",
    "typer"
]

# Optional dependencies for development
[project.optional-dependencies]
dev = [
    "pytest",
    "ipdb",
    "matplotlib",
    ]

[project.scripts]
deforest = "deforestation.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
#include = ["deforestation*"]
exclude = ["data*", "logs*", "tmp*", "outputs*"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]